--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
-    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.0",
@@ -63,6 +62,7 @@
     "saas": "^1.0.0",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "serve": "^11.3.0",
     "style-loader": "1.1.3",
     "terser-webpack-plugin": "2.3.4",
     "ts-pnp": "1.1.5",
@@ -75,7 +75,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "serve": "serve ./build --single"
   },
   "eslintConfig": {
     "extends": "react-app"
